--- a/portfolio_NatySantos/templates/contact.html
+++ b/portfolio_NatySantos/templates/contact.html
@@ -4,8 +4,8 @@
 
 {% block content %}
 
-<section class="py-16 bg-white">
-  <div class="container mx-auto px-6 grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
+<section class="contacto">
+  <div class="container mx-auto px-6 grid grid-cols-1 md:grid-cols-2 gap-12 items-center py-12">
 
     <!-- Descripcion -->
     <div class="text-center md:text-left">
@@ -33,14 +33,14 @@
 
     <!-- Formulario de contacto -->
 
-    <div class="bg-beige-100 p-8 rounded-2xl shadow-md">
+    <div class="bg-gray-50 p-8 rounded-2xl shadow-md">
       <h3 class="text-2xl font-bold mb-6 text-center text-gray-700">Contáctame</h3>
       <form action="#" method="POST" class="space-y-4">
         <input type="text" placeholder="Tu Nombre" class="w-full p-3 rounded-md border border-gray-300 focus:outline-none focus:ring-2 focus:ring-pink-300">
         <input type="email" placeholder="Correo Electrónico" class="w-full p-3 rounded-md border border-gray-300 focus:outline-none focus:ring-2 focus:ring-pink-300">
         <input type="text" placeholder="Número de Contacto" class="w-full p-3 rounded-md border border-gray-300 focus:outline-none focus:ring-2 focus:ring-pink-300">
         <textarea placeholder="Mensaje" rows="4" class="w-full p-3 rounded-md border border-gray-300 focus:outline-none focus:ring-2 focus:ring-pink-300"></textarea>
-        <button type="submit" class="bg-pink-500 text-white px-8 py-3 rounded-full hover:bg-pink-600 transition">
+        <button type="submit" class="button">
           Enviar
         </button>
       </form>
