--- a/portfolio_NatySantos/templates/contact.html
+++ b/portfolio_NatySantos/templates/contact.html
@@ -9,21 +9,22 @@
 
     <!-- Descripcion -->
     <div class="text-center md:text-left">
-      <h2 class="text-3xl md:text-4xl font-bold mb-6 text-gray-700">Envíame un mensaje</h2>
+      <h2 class="text-3xl md:text-4xl font-bold mb-6">Envíame un mensaje</h2>
       <p class="mb-8 text-gray-600 leading-relaxed">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris aliquam orci pulvinar ligula molestie, ut imperdiet turpis pulvinar.
+        Escribeme para resolver cualquier duda que tengas.<br> Pregunta por nuestros paquetes para darte la mejor
+        experiencia.
       </p>
 
       <!-- Informacion de contacto -->
-      <div class="space-y-4 text-sm text-gray-600">
+      <div class="space-y-4 text-sm ">
         <div class="flex items-center space-x-3">
-          <i class="fas fa-envelope"></i> <span>nathysantos@gmail.com</span>
+          <i class="fas fa-envelope"></i> <span>nathysantosfotografia@gmail.com</span>
         </div>
         <div class="flex items-center space-x-3">
           <i class="fas fa-globe"></i> <span>nathysantos.com</span>
         </div>
         <div class="flex items-center space-x-3">
-          <i class="fab fa-whatsapp"></i> <span>+57 123 456 7890</span>
+          <i class="fab fa-whatsapp"></i> <span>+57 +57 312 390 5110</span>
         </div>
         <div class="flex items-center space-x-3">
           <i class="fab fa-instagram"></i> <span>@nathysantosfotosdebodas</span>
@@ -33,13 +34,17 @@
 
     <!-- Formulario de contacto -->
 
-    <div class="bg-gray-50 p-8 rounded-2xl shadow-md">
-      <h3 class="text-2xl font-bold mb-6 text-center text-gray-700">Contáctame</h3>
+    <div class="formulario p-8 rounded-2xl shadow-md">
+      <h3 class="text-2xl font-bold mb-6 text-center">CONTÁCTAME</h3>
       <form action="#" method="POST" class="space-y-4">
-        <input type="text" placeholder="Tu Nombre" class="w-full p-3 rounded-md border border-gray-300 focus:outline-none focus:ring-2 focus:ring-pink-300">
-        <input type="email" placeholder="Correo Electrónico" class="w-full p-3 rounded-md border border-gray-300 focus:outline-none focus:ring-2 focus:ring-pink-300">
-        <input type="text" placeholder="Número de Contacto" class="w-full p-3 rounded-md border border-gray-300 focus:outline-none focus:ring-2 focus:ring-pink-300">
-        <textarea placeholder="Mensaje" rows="4" class="w-full p-3 rounded-md border border-gray-300 focus:outline-none focus:ring-2 focus:ring-pink-300"></textarea>
+        <input type="text" placeholder="Tu Nombre"
+          class="w-full p-3 rounded-md border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-100">
+        <input type="email" placeholder="Correo Electrónico"
+          class="w-full p-3 rounded-md border border-gray-300 focus:outline-none focus:ring-2 focus:ring-pink-300">
+        <input type="text" placeholder="Número de Contacto"
+          class="w-full p-3 rounded-md border border-gray-300 focus:outline-none focus:ring-2 focus:ring-pink-300">
+        <textarea placeholder="Mensaje" rows="4"
+          class="w-full p-3 rounded-md border border-gray-300 focus:outline-none focus:ring-2 focus:ring-pink-300"></textarea>
         <button type="submit" class="button">
           Enviar
         </button>
