--- a/portfolio_NatySantos/templates/layouts/partials/footer.html
+++ b/portfolio_NatySantos/templates/layouts/partials/footer.html
@@ -9,10 +9,16 @@
       <div class="text-center space-y-4">
         <h4 class="font-semibold text-lg">Navegar</h4>
         <ul class="space-y-2 text-sm">
-          <li><a href="#" class="resaltar">Home</a></li>
+          <!--ir a NathySantos-->
           <li><a href="#quien-soy" class="resaltar">Nathy Santos</a></li>
+          <!--ir a home-->
+          <li><a href="{% url 'home' %}" class="resaltar">Home</a></li>
+          <!--ir a Protfolio-->
           <li><a href="#portafolio" class="resaltar">Portafolio</a></li>
+          <!--ir a Calendar-->
           <li><a href="#calendario" class="resaltar">Reservas</a></li>
+          <!--ir a Contact-->
+          <li><a href="{% url 'contact' %}" class="resaltar">Contacto</a></li>
         </ul>
       </div>
 
@@ -21,7 +27,7 @@
         <ul class="space-y-2 text-sm">
           <li><a href="https://instagram.com/nathysantosfotosdebodas" target="_blank" class="resaltar">Instagram</a>
           </li>
-          <li><a href="https://wa.me/1234567890" target="_blank" class="resaltar">WhatsApp</a></li>
+          <li><a href="https://wa.me/+573123905110" target="_blank" class="resaltar">WhatsApp</a></li>
         </ul>
         <h4 class="font-semibold text-lg mt-6">Contacto</h4>
         <a href="#contacto" class="text-sm resaltar">Envía un mensaje</a>
