--- a/portfolio_NatySantos/templates/layouts/partials/menu.html
+++ b/portfolio_NatySantos/templates/layouts/partials/menu.html
@@ -4,10 +4,15 @@
   <div class="container mx-auto px-4 py-4 flex justify-between items-center">
     <h1 class="text-2xl font-bold tracking-wide">Nathy Santos</h1>
     <nav class="space-x-7 text-sm font-medium">
-      <a href="#" class="resaltar">HOME</a>
+      <!--Ir al Index-->
+      <a href="{% url 'home' %}" class="resaltar">HOME</a>
+      <!--Ir al Portfolio-->
       <a href="#portafolio" class="resaltar">PORTAFOLIO</a>
-      <a href="#calendario" class="resaltar">CALENDARIO</a>
-      <a href="#contacto" class="resaltar">CONTACTO</a>
+      <!--Ir al Calendar-->
+      <a href="#Calendario" class="resaltar">CALENDARIO</a>
+      <!--Ir al Contact-->
+      <a href="{% url 'contact' %}" class="resaltar">CONTACTO</a>
+      <!--Ir al NathySantos-->
       <a href="#quien-soy" class="resaltar">¿QUIÉN SOY?</a>
     </nav>
   </div>
