--- a/portfolio_NatySantos/templates/layouts/app.html
+++ b/portfolio_NatySantos/templates/layouts/app.html
@@ -18,6 +18,10 @@
 
 <body class=" text-gray-800 font-sans" style="background-color: #F2F2F2; color: #A68B6A;">
 
+   <div id="preloader" class="fixed inset-0 bg-white flex items-center justify-center z-50">
+    <img src="{% static 'img/webp_format/logo/logo_2.webp' %}" alt="Nathy Santos" class="h-20 animate-pulse">
+  </div>
+
   <!-- header -->
   {% include 'layouts/partials/menu.html' %}
 
@@ -27,6 +31,13 @@
 
   <!-- footer -->
   {% include 'layouts/partials/footer.html' %}
+
+<script>
+  window.addEventListener('load', function() {
+    const preloader = document.getElementById('preloader');
+    preloader.classList.add('hidden');
+  });
+</script>
 
 </body>
 
