--- a/portfolio_NatySantos/templates/nathySantos.html
+++ b/portfolio_NatySantos/templates/nathySantos.html
@@ -1,9 +1,6 @@
 {% extends 'layouts/app.html' %}
-{% load static %}
 
-{% block title %}
-¿Quién soy? | Nathy Santos
-{% endblock %}
+{% block title %}¿Quién soy? | Nathy Santos{% endblock %}
 
 {% block content %}
 
@@ -13,7 +10,7 @@
     <!-- Imagen de Nathalie -->
     <div class="flex justify-center">
       <div class="bg-[#f2d8c2] p-2 rounded-lg">
-        <img src="{% static 'img/webp_format/nathySantos/nathySantos.webp' %}" alt="Nathalie Santos" class="rounded-md shadow-md max-w-sm">
+        <img src="/static/img/webp_format/nathySantos/nathySantos.webp" alt="Nathalie Santos" class="rounded-md shadow-md max-w-sm">
       </div>
     </div>
 
