--- a/portfolio_NatySantos/templates/layouts/partials/menu.html
+++ b/portfolio_NatySantos/templates/layouts/partials/menu.html
@@ -1,10 +1,11 @@
+{% load static %}
 <!-- Header / Barra de Navegacion -->
 
 <header class="bg-white shadow-md sticky top-0 z-50">
   <div class="container mx-auto px-6 grid grid-cols-2 items-center">
     <div class="flex justify-start items-center overflow-hidden h-20">
       <a href="{% url 'home' %}">
-        <img src="static/img/webp_format/logo/logo_2.webp" alt="Nathy Santos" class="h-28 w-auto">
+        <img src="{% static 'img/webp_format/logo/logo_2.webp' %}" alt="Nathy Santos" class="h-28 w-auto">
       </a>
     </div>
 
