Ajustes estilos, creacion calendar

--- a/portfolio_NatySantos/templates/layouts/partials/menu.html
+++ b/portfolio_NatySantos/templates/layouts/partials/menu.html
@@ -15,7 +15,7 @@
       <!--Ir al Portfolio-->
       <a href="{% url 'menuPortfolio' %}" class="resaltar">PORTAFOLIO</a>
       <!--Ir al Calendar-->
-      <a href="#Calendario" class="resaltar">CALENDARIO</a>
+      <a href="{% url 'calendar' %}" class="resaltar">CALENDARIO</a>
       <!--Ir al Contact-->
       <a href="{% url 'contact' %}" class="resaltar">CONTACTO</a>
       <!--Ir al NathySantos-->
