--- a/portfolio_NatySantos/templates/layouts/partials/footer.html
+++ b/portfolio_NatySantos/templates/layouts/partials/footer.html
@@ -10,15 +10,13 @@
         <h4 class="font-semibold text-lg">Navegar</h4>
         <ul class="space-y-2 text-sm">
           <!--ir a NathySantos-->
-          <li><a href="#quien-soy" class="resaltar">Nathy Santos</a></li>
+          <li><a href="{% url 'nathySantos' %}" class="resaltar">Nathy Santos</a></li>
           <!--ir a home-->
           <li><a href="{% url 'home' %}" class="resaltar">Home</a></li>
           <!--ir a Protfolio-->
-          <li><a href="#portafolio" class="resaltar">Portafolio</a></li>
+          <li><a href="{% url 'menuPortfolio' %}" class="resaltar">Portafolio</a></li>
           <!--ir a Calendar-->
-          <li><a href="#calendario" class="resaltar">Reservas</a></li>
-          <!--ir a Contact-->
-          <li><a href="{% url 'contact' %}" class="resaltar">Contacto</a></li>
+          <li><a href="{% url 'calendar' %}" class="resaltar">Reservas</a></li>
         </ul>
       </div>
 
@@ -30,7 +28,7 @@
           <li><a href="https://wa.me/+573123905110" target="_blank" class="resaltar">WhatsApp</a></li>
         </ul>
         <h4 class="font-semibold text-lg mt-6">Contacto</h4>
-        <a href="#contacto" class="text-sm resaltar">Envía un mensaje</a>
+        <a href="{% url 'contact' %}" class="text-sm resaltar">Envía un mensaje</a>
       </div>
     </div>
 
